# stable-exchange

./: CHANGELOG.md  README.MD  hie.yaml  stable-exchange.cabal
src/StableExchange/: AdaHolder.hs  MyCurrency.hs
